@@ -335,6 +335,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S300   (EXPERIMENTAL)
        Canon   BJC S500   (EXPERIMENTAL)
        Canon   BJC S600   (EXPERIMENTAL)
+       Canon   BJC S800   (EXPERIMENTAL)
 
        *1: for compatibility, the changed printers are named with
         "new" appended. The old printers will be deprecated in a
